refactor[#159]: Redis 기반 Caching 매커니즘 적용